--- a/H071211059/Pertemuan_01_02/app/build.gradle
+++ b/H071211059/Pertemuan_01_02/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.h071211059.pertemuan0102'
+    namespace 'com.h071211059.pertemuan_01_02'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.h071211059.pertemuan0102"
+        applicationId "com.h071211059.pertemuan_01_02"
         minSdk 24
         targetSdk 33
         versionCode 1
