--- a/H071211059/Pertemuan_08/app/build.gradle
+++ b/H071211059/Pertemuan_08/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.h071211059.pertemuan_08'
+    namespace 'com.h071211059.sql'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.h071211059.pertemuan_08"
+        applicationId "com.h071211059.sql"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -23,8 +23,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_14
-        targetCompatibility JavaVersion.VERSION_14
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
