--- a/H071211059/Pertemuan_08/app/src/main/AndroidManifest.xml
+++ b/H071211059/Pertemuan_08/app/src/main/AndroidManifest.xml
@@ -10,14 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LocalSQLiteApp"
+        android:theme="@style/Theme.SQL"
         tools:targetApi="31">
         <activity
             android:name=".FormActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="adjustNothing"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
