--- a/H071211059/Pertemuan_08/settings.gradle
+++ b/H071211059/Pertemuan_08/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "LocalSQLite App"
+rootProject.name = "SQL"
 include ':app'
